infrastructure/webapp/k8s/middleware-authelia.yml
apiVersion: 'traefik.io/v1alpha1'
kind: 'Middleware'
metadata:
  name: 'forwardauth-authelia' # name of middleware as it appears in Traefik, and how you reference in ingress rules
  #namespace: 'default' # name of namespace that Traefik is in
  labels:
    app.kubernetes.io/instance: 'authelia'
    app.kubernetes.io/name: 'authelia'
spec:
  #stripPrefix:
  #  prefixes:
  #  - /app
  forwardAuth:
    address: 'http://authelia.traefik.svc.cluster.local:9091/api/authz/forward-auth'
    authResponseHeaders:
      - 'Remote-User'
      - 'Remote-Groups'
      - 'Remote-Email'
      - 'Remote-Name'
