infrastructure/webapp/k8s/middleware-rewritepath.yml
apiVersion: 'traefik.io/v1alpha1'
kind: 'Middleware'
metadata:
  name: 'rewrite-path' # name of middleware as it appears in Traefik, and how you reference in ingress rules
  #namespace: 'default' # name of namespace that Traefik is in
  #labels:
  #  app.kubernetes.io/instance: 'authelia'
  #  app.kubernetes.io/name: 'authelia'
spec:
  stripPrefix:
    prefixes:
    - /app
  #forwardAuth:
  #  address: 'http://authelia.traefik.svc.cluster.local/api/authz/forward-auth'
  #  authResponseHeaders:
  #    - 'Remote-User'
  #    - 'Remote-Groups'
  #    - 'Remote-Email'
  #    - 'Remote-Name'
