infrastructure/webapp/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
    #traefik.ingress.kubernetes.io/router.middlewares: dmarc-dev-traefik-middlewares@kubernetescrd
    traefik.ingress.kubernetes.io/router.middlewares: 'dmarc-dev-rewrite-path@kubernetescrd,dmarc-dev-forwardauth-authelia@kubernetescrd' # name of your middleware, as defined in your middleware.yml
    #traefik.ingress.kubernetes.io/router.tls: 'true'
spec:
  #ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: webapp
            port:
              name: webapp
